Adicionando charset utf-8 no index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>DCC202 - Atividade 3: Alexandre Vieira Pereira Pacelli</title>
 </head>
 <body>
