--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DCC202 - Atividade 3: Alexandre Vieira Pereira Pacelli</title>
 </head>
 <body>
