Adicionando tag main e título na main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>DCC202 - Atividade 3: Alexandre Vieira Pereira Pacelli</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Título na main</h1>
+    </main>
 </body>
 </html>
