Adicionando um parágrafo na main e corrigindo título

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <main>
-        <h1>Título na main</h1>
+        <h1>DCC202 - Atividade 3: Alexandre Vieira Pereira Pacelli</h1>
+        <p>Essa é a atividade 3 sobre html da disciplina DCC202.</p>
     </main>
 </body>
 </html>
