Adicionando uma section para a naturalidade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <main>
         <h1>DCC202 - Atividade 3: Alexandre Vieira Pereira Pacelli</h1>
         <p>Essa é a atividade 3 sobre html da disciplina DCC202.</p>
+        <section>
+            <h1>Naturalidade</h1>
+            <p>Nascido em Ubá, Minas Gerais.</p>
+        </section>
     </main>
 </body>
 </html>
