Adicionando section sobre o que gosto de fazer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <h1>Naturalidade</h1>
             <p>Nascido em Ubá, Minas Gerais.</p>
         </section>
+        <section>
+            <h1>O que eu gosto de fazer?</h1>
+            <p>Gosto de assistir séries, estudar programação, fazer atividade física em casa e escutar músicas.</p>
+        </section>
     </main>
 </body>
 </html>
